first commit, one file added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-Harssh Mahajan
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>SpaceX Launch</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <h1>SpaceX Launch Program</h1>
+    </header>
+    <main>
+
+        <section class="left_side">
+            <div class="search_container">
+                <h3>filters</h3>
+                <h4>Launch Year</h4>
+                <hr>
+                <div class="search_box" id="YearFilter">
+                    <span onclick="fetchMissions(this, 'year');">2006</span>
+                    <span onclick="fetchMissions(this, 'year');">2007</span>
+                    <span onclick="fetchMissions(this, 'year');">2008</span>
+                    <span onclick="fetchMissions(this, 'year');">2009</span>
+                    <span onclick="fetchMissions(this, 'year');">2010</span>
+                    <span onclick="fetchMissions(this, 'year');">2011</span>
+                    <span onclick="fetchMissions(this, 'year');">2012</span>
+                    <span onclick="fetchMissions(this, 'year');">2013</span>
+                    <span onclick="fetchMissions(this, 'year');">2014</span>
+                    <span onclick="fetchMissions(this, 'year');">2015</span>
+                    <span onclick="fetchMissions(this, 'year');">2016</span>
+                    <span onclick="fetchMissions(this, 'year');">2017</span>
+                    <span onclick="fetchMissions(this, 'year');">2018</span>
+                    <span onclick="fetchMissions(this, 'year');">2019</span>
+                    <span onclick="fetchMissions(this, 'year');">2020</span>
+                </div>
+                <h4>Successful Launch</h4>
+                <hr>
+                <div class="successful_launch" id="LaunchFilter">
+
+                    <span onclick="fetchMissions(this, 'launched');">True</span>
+                    <span onclick="fetchMissions(this, 'launched');">False</span>
+                </div>
+                <h4>Successful Landing</h4>
+                <hr>
+                <div class="successful_landing" id="LaunchAndLandFilter">
+
+                    <span onclick="fetchMissions(this, 'launchedAndLanded');">True</span>
+                    <span onclick="fetchMissions(this, 'launchedAndLanded');">False</span>
+                </div>
+            </div>
+        </section>
+
+        <section class="right_side">
+            <div class="result_container" id="Missions">
+            </div>
+        </section>
+    </main>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="js/custom.js"></script>
+
+
+</body>
+
+</html>
